[project]
name = "pythonproject4"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "oav222@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.5,<3.15"
dependencies = [
    "aiogram (>=3.23.0,<4.0.0)",
    "fastapi (>=0.124.2,<0.125.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
